--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,15 +1,33 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  
+  text-align: center;
 }
 
+.items{
+  display: flex;
+  justify-content: center;
+  /* align-items: baseline; */
+  gap: 52px;
+  /* margin: 32px; */
+  /* text-align: center; */
+  
+}
 img {
   width: 100px;
   height: 100px;
 }
 
+.plant{
+  max-width: 200px;
+  /* min-width: 150px; */
+}
+
 .title {
   font-size: 36px;
   font-weight: 900;
+  /* text-align: center; */
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
