--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -13,6 +13,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  
 }
 
 .modal {
@@ -20,6 +21,10 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+
+  padding: 16px;
+  display: flex;
+  gap: 16px;
 }
 
 .icon {
@@ -33,6 +38,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  /* margin: 8px; not needed */
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -47,6 +55,7 @@ body {
   align-items: center;
   justify-content: center;
 }
+
 
 button {
   padding: 8px 16px;
@@ -63,4 +72,27 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+.header{/* .header */
+  display: flex;/* fine */
+  justify-content: space-between;/* fine */
+  font-weight: bold;/* fine */
+  font-size: larger; /* fine */
+  align-items: basel;/* center*/
+  margin-bottom: 8px;/* margin-bottom: 8px; */
+}
+.text{
+  margin-bottom: 18px; /* will do fine */
+}
+.extra{
+  color: royalblue;
+  font-size: 26px;
+  font-weight: 700;
+  background: lavender;
+
+  align-self:flex-end;
+  border-radius: 15px;
+  padding: 5px;
+   /* flex-basis: 0; */
+  height: 200px;
 }
