--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,27 +2,95 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  /* my code */
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+  /* align-items: stretch; */
+  /* align-items: center; */
+}
+
+/* my code */
+.body{
+  display: flex;
+  flex: 1;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  /* my code */
+  padding-left: 16px;
+  font-size: 32px;
+  font-weight: 900;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+/* align-self: stretch; */
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  /* my code */
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
+  /* my code */
+  /* align-self: flex-start; */
+  /* display: flex;
+  align-items: baseline; */
+  flex-shrink: 0;
+  padding: 16px;
+  /* width: 500px; */
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  /* my code */
+  padding: 16px;
+  margin: 16px;
+  width: 300px;
 }
+/* my code */
+
+.container{
+  display: flex;
+  /* justify-content: center; */
+  flex-wrap: wrap;
+  padding: 32px;
+}
+/* .card-flex {
+  display: flex;
+  justify-content: space-evenly;
+  /* align-items: center; */
+  /* flex-wrap: wrap;
+  flex-grow: 0;
+} */
+
+a {
+  text-decoration: none;
+  color: #eee;
+  font-size: 24px;
+}
+
+li {
+  margin-bottom: 16px;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+
