--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -1,4 +1,5 @@
-body, html {
+body,
+html {
   height: 100%;
   margin: 0;
 }
@@ -7,7 +8,10 @@ body, html {
   text-align: center;
   height: 100%;
   padding: 16px;
-  box-sizing: border-box;
+  box-sizing: content-box;
+  display: grid;
+  gap: 15px;
+  grid-template-columns: 25% 75%;
 }
 
 .container div {
@@ -20,15 +24,18 @@ body, html {
 }
 
 .header {
-  background-color: #FFDE22;
+  background-color: #ffde22;
+  grid-column: span 2;
 }
 
 .sidebar {
-  background-color: #FF7755;
+  background-color: #ff7755;
+  grid-column: 1;
+  grid-row: 2 / 4;
 }
 
 .nav {
-  background-color: #00DDFF;
+  background-color: #00ddff;
 }
 
 .article {
@@ -40,8 +47,10 @@ body, html {
   font-family: sans-serif;
   color: white;
   text-align: left;
+  grid-row: 3 / 4;
 }
 
 .footer {
   background-color: #393f4d;
+  grid-column: span 2;
 }
